Visitor Logs/objects/Visitor_Log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visitor Logs</relationshipLabel>
    <relationshipName>Visitor_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>