Visitor Logs/objects/Visitor_Log__c/fields/Date_Time_IN__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_IN__c</fullName>
    <label>Date Time IN</label>
    <type>DateTime</type>
</CustomField>