Visitor Logs/objects/Visitor_Log__c/fields/Date_Time_OUT__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_OUT__c</fullName>
    <label>Date Time OUT</label>
    <type>DateTime</type>
</CustomField>